[tool.poetry]
name = "wizwalker"
version = "1.8.2"
description = "Wizard101 scripting library"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/StarrFox/wizwalker"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
aiofiles = "^23.2.1"
pymem = "1.13.1"
appdirs = "^1.4.4"
click = "^8.1.7"
click_default_group = "^1.2.4"
janus = "^1.0.0"
pefile = "^2023.2.7"
regex = "^2024.5.15"

[tool.poetry.dev-dependencies]
pywin32-ctypes = "^0.2.2"
pdoc = "^14.5.0"

[tool.poetry.scripts]
wizwalker = "wizwalker.__main__:main"

[build-system]
requires = ["poetry>=1.8.3"]
build-backend = "poetry.masonry.api"
